# muffin-sentry

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .pre-commit-config.yaml  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.md  README.rst  example.py  muffin_sentry.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: publish.yml  release.yml  tests.yml
muffin_sentry/: __init__.py  plugin.py
requirements/: requirements.txt
