[project]
name = "muffin-sentry"
version = "1.4.1"
description = "Sentry Integration for Muffin framework"
readme = "README.rst"
requires-python = ">=3.8"
license = {"text" = "MIT License"}
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["sentry", "asyncio", "trio", "asgi", "muffin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = [
  "muffin >= 0.92",
  "sentry-sdk >= 1.4.3",
]

[project.urls]
homepage = "https://github.com/klen/muffin-sentry"
repository = "https://github.com/klen/muffin-sentry"
changelog = "https://raw.githubusercontent.com/klen/muffin-sentry/master/CHANGELOG.md"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-aio[curio,trio]",
  "pytest-mypy",
  "ruff",
]
dev = ["pre-commit", "refurb", "bump2version"]
yaml = ["pyyaml"]
example = ["uvicorn", "muffin-peewee-aio", "marshmallow-peewee"]
peewee = [
    "muffin-peewee-aio >= 0.2.2",
    "marshmallow-peewee >= 3.2.0",
]
sqlalchemy = [
    "muffin-databases >= 0.3.2",
    "marshmallow-sqlalchemy",
    "sqlalchemy",
]

[tool.setuptools]
packages = ['muffin_sentry']

[tool.setuptools.package-data]
muffin_sentry = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-xsv"
log_cli = true

[tool.mypy]
packages = ["muffin_sentry"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py38"
exclude = [".venv", "docs", "examples"]
select = ["ALL"]
ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "RET", "S101", "PLR2004", "PLR0912", "N804", "A003", "TRY003"]
