[tool.poetry]
name = "muffin-sentry"
version = "1.11.0"
description = "Sentry Integration for Muffin framework"
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
homepage = "https://github.com/klen/muffin-sentry"
repository = "https://github.com/klen/muffin-sentry"
keywords = ["sentry", "asyncio", "trio", "asgi", "muffin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]

[tool.poetry.dependencies]
python = "^3.9"
muffin = "^0"
sentry-sdk = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ipdb = "*"
pre-commit = "*"
pytest = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }
pytest-mypy = "*"
ruff = "*"

[tool.pytest.ini_options]
addopts = "-lxsv tests.py"
log_cli = true

[tool.mypy]
packages = ["muffin_sentry"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312,py313,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py39"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
