[wheel]
python-tag = py3

[metadata]
name = muffin-sentry
version = attr: muffin_sentry.__version__
url = https://github.com/klen/muffin-sentry
description = Sentry Integration for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = sentry, asyncio, trio, asgi, muffin
project_urls = 
	Documentation = https://github.com/klen/muffin-sentry
	Source code = https://github.com/klen/muffin-sentry
	Issue tracker = https://github.com/klen/muffin-sentry/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_sentry
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin      >= 0.71
	sentry-sdk  >= 0.19.5

[options.extras_require]
tests = 
	pytest
	pytest-aio[curio,trio]
	pytest-mypy

[pylama]
ignore = D211,D213

[pylama:pylint]
disable = W0212

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -sxv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
